--- a/html.html
+++ b/html.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Jost:400,700,900&display=swap&subset=latin-ext" rel="stylesheet">
+
+
+    
 </head>
 
 <body>
 
-<header>
-<h1>KARUSEK PROGRAMISTA</h1>
-<nav>
-    <a href="index.html">Strona główna</a>
-    <a href="html.html">Nauka HTML</a>
+<header class="header">
+<h1>KRECIK PROGRAUJE</h1>
+<nav class="nav">
+    <li> <a href="index.html">Strona główna</a></li>
+    <li> <a href="html.html">Nauka HTML</a></li>
+      <li> <a href="html.html">Nauka CSS</a></li>
+          <li> <a href="html.html">Nauka JS</a></li>
 </nav>
-<h2 class="grey">Czyli <em>plan B</em> na moje zyćko</h2>
 </header>
 <main>
-    <section>
+    <section class="section-art">
         <article>
             <h2>NO SIEMA TU JEST HTML THING</h2>
         </article>
@@ -36,6 +41,8 @@
 
 </main>
 <footer>Dzienniczek Karuska | Wszelkie prawa zastrzezone!!! &copy;</footer>
+<script src="main.js"></script>
+
 </body>
 
 </html>
