header change name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <header class="header">
-<h1>KRECIK PROGRAMUJE</h1>
+<h1>PLAN B KRECIKA</h1>
 <nav class="nav">
 
   <li> <a href="index.html">Strona główna</a></li>
